package com.krickert.search.pipeline.api.service.impl;

import com.krickert.search.config.consul.service.ConsulBusinessOperationsService;
import com.krickert.search.config.pipeline.model.PipelineConfig;
import com.krickert.search.config.pipeline.model.PipelineStepConfig;
import com.krickert.search.config.pipeline.model.PipelineStepConfig.ProcessorInfo;
import com.krickert.search.config.pipeline.model.StepType;
import com.krickert.search.pipeline.api.dto.*;
import com.krickert.search.pipeline.api.service.TestUtilityService;
import jakarta.inject.Singleton;
import reactor.core.publisher.Flux;
import reactor.core.publisher.Mono;

import java.time.Duration;
import java.time.Instant;
import java.util.*;

/**
 * Implementation of TestUtilityService for MVP.
 * Many methods are stubs that return basic responses.
 */
@Singleton
public class TestUtilityServiceImpl implements TestUtilityService {
    
    private final ConsulBusinessOperationsService consulService;
    
    public TestUtilityServiceImpl(ConsulBusinessOperationsService consulService) {
        this.consulService = consulService;
    }
    
    @Override
    public Mono<ModuleRegistrationResponse> registerModule(ModuleRegistrationRequest request) {
        // TODO: Implement actual module registration via Consul
        return Mono.just(new ModuleRegistrationResponse(
                request.serviceId(),
                "registered",
                Instant.now(),
                "consul-" + request.serviceId(),
                "Module registered successfully"
        ));
    }
    
    @Override
    public Mono<Void> deregisterModule(String serviceId) {
        // TODO: Implement actual deregistration
        return Mono.empty();
    }
    
    @Override
    public Flux<ModuleInfo> getAllModules() {
        // TODO: Query Consul for actual modules
        return Flux.empty();
    }
    
    @Override
    public Mono<PipelineConfig> createSimplePipeline(String pipelineName, List<String> stepNames) {
        Map<String, PipelineStepConfig> steps = new HashMap<>();
        
        for (int i = 0; i < stepNames.size(); i++) {
            String stepName = stepNames.get(i);
            var stepConfig = new PipelineStepConfig(
                    stepName,
                    StepType.PIPELINE,
                    new ProcessorInfo(stepName, null)
            );
            steps.put("step-" + i, stepConfig);
        }
        
        return Mono.just(PipelineConfig.builder()
                .name(pipelineName)
                .pipelineSteps(steps)
                .build());
    }
    
    @Override
    public Mono<PipelineConfig> createPipeline(PipelineCreateRequest request) {
        // TODO: Implement complex pipeline creation
        return createSimplePipeline(request.name(), List.of());
    }
    
    @Override
    public Mono<TestDataResponse> createTestData(TestDataRequest request) {
        return Mono.just(new TestDataResponse(
                1, // count
                List.of(Map.of("id", "test-data-" + UUID.randomUUID(), "type", request.dataType())),
                Map.of("generated", "true")
        ));
    }
    
    @Override
    public Mono<HealthCheckResponse> checkServiceHealth(String serviceName, String host, int port) {
        // TODO: Implement actual gRPC health check
        return Mono.just(new HealthCheckResponse(
                serviceName,
                "SERVING",
                Instant.now(),
                Duration.ofMillis(100),
                "1.0.0",
                Map.of("host", host, "port", port),
                null
        ));
    }
    
    @Override
    public Mono<HealthCheckResponse> waitForHealthy(String serviceName, String host, int port, long timeoutSeconds) {
        // TODO: Implement with retries
        return checkServiceHealth(serviceName, host, port)
                .delayElement(Duration.ofSeconds(1));
    }
    
    @Override
    public Flux<TestDocument> generateTestDocuments(TestDataGenerationRequest request) {
        return Flux.range(0, request.count())
                .map(i -> new TestDocument(
                        "doc-" + i,
                        "Test Document " + i,
                        "This is test document content " + i,
                        request.documentType(),
                        1024L, // sizeBytes
                        Instant.now(),
                        Map.of("index", String.valueOf(i))
                ));
    }
    
    @Override
    public Mono<EnvironmentStatus> verifyEnvironment() {
        // TODO: Actually check services
        return Mono.just(new EnvironmentStatus(
                "ready",
                Instant.now(),
                List.of(
                        new EnvironmentStatus.ServiceStatus(
                                "consul", "infrastructure", "healthy", "1.16", "http://localhost:8500", true
                        ),
                        new EnvironmentStatus.ServiceStatus(
                                "kafka", "infrastructure", "healthy", "3.7", "localhost:9092", true
                        ),
                        new EnvironmentStatus.ServiceStatus(
                                "apicurio", "infrastructure", "healthy", "2.5", "http://localhost:8080", true
                        )
                ),
                List.of(),
                true
        ));
    }
    
    @Override
    public Mono<Void> seedKvStore(String key, Object value) {
        return consulService.putValue(key, value).then();
    }
    
    @Override
    public Mono<Void> cleanKvStore(String prefix) {
        // TODO: Implement prefix cleanup
        return Mono.empty();
    }
    
    @Override
    public Mono<Void> seedSchemas() {
        // TODO: Load and register schemas
        return Mono.empty();
    }
    
    @Override
    public Mono<Void> registerSchema(String schemaId, String schemaContent) {
        // TODO: Register with schema registry
        return Mono.empty();
    }
    
    @Override
    public Mono<ValidationResult> validateAgainstSchema(String schemaId, String jsonContent) {
        // TODO: Implement JSON schema validation
        return Mono.just(new ValidationResult(
                true,
                List.of(),
                Map.of("schemaId", schemaId),
                "json-schema"
        ));
    }
}